# kms-key-service

./: .env  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  rust-toolchain.toml  rustc-ice-2023-12-15T06_41_55-53230.txt  rustc-ice-2023-12-15T06_41_55-53231.txt  rustc-ice-2023-12-15T06_44_45-54174.txt  rustc-ice-2023-12-15T06_44_45-54175.txt  rustc-ice-2023-12-15T06_44_52-54231.txt  rustc-ice-2023-12-15T06_44_52-54232.txt  rustc-ice-2023-12-15T06_44_58-54272.txt  rustc-ice-2023-12-15T06_44_58-54273.txt  rustc-ice-2023-12-19T08_23_33-68733.txt  rustc-ice-2023-12-19T08_23_33-68734.txt  rustc-ice-2023-12-19T08_23_37-68780.txt  rustc-ice-2023-12-19T08_23_37-68781.txt  rustc-ice-2023-12-19T08_24_13-68910.txt  rustc-ice-2023-12-19T08_24_13-68911.txt  rustfmt.toml
.github/workflows/: ci.yml
.sqlx/: query-31b88b43803a466cfdf637c79ab917f8f90bacbcebe65d1a24c08cf8b2a2186f.json
log/: kms-secret-service.log.2023-10-17-07  kms-secret-service.log.2023-10-17-08  kms-secret-service.log.2023-10-17-09  kms-secret-service.log.2023-10-17-11
sql/: 00_schema.sql
src/: cache.rs  common.rs  controller.rs  crypto.rs  entity.rs  main.rs  pojo.rs  repository.rs  service.rs
src/cache/: key.rs  key_meta.rs  kms.rs  prelude.rs
src/common/: algorithm.rs  axum.rs  cache.rs  configs.rs  datasource.rs  encrypto.rs  enums.rs  errors.rs  kits.rs  log.rs  logger.rs  macros.rs  secrets.rs  sequance.rs  utils.rs
src/common/crypto/: ec.rs  rsa.rs
src/common/encrypto/: aes.rs  algorithm.rs  ec.rs  rsa.rs  symm.rs  types.rs
src/common/kits/: algorithm.rs  rsa.rs
src/common/macros/: datasource.rs  patch.rs
src/common/secrets/: algorithm.rs  ec.rs  rsa.rs  symm.rs  types.rs
src/controller/: crypto_controller.rs  key_alias_controller.rs  key_controller.rs  key_extra_controller.rs  key_meta_controller.rs  kms_controller.rs  secret_controller.rs
src/crypto/: aes.rs  algorithm.rs  ec.rs  rsa.rs  symm.rs  types.rs
src/entity/: key.rs  key_alias.rs  key_meta.rs  kms.rs  kms_aksk.rs  prelude.rs  secret.rs  secret_meta.rs  t_secret.rs  t_secret_meta.rs
src/pojo/: form.rs  result.rs
src/pojo/form/: crypto.rs  key.rs  key_extra.rs  key_meta.rs  kms.rs  secret.rs
src/pojo/po/: secret.rs
src/pojo/result/: key.rs  kms.rs  secret.rs
src/repository/: key_alias_repository.rs  key_extra_repository.rs  key_meta_repository.rs  key_repository.rs  kms_repository.rs  secret_repository.rs
src/service/: key_alias_service.rs  key_extra_service.rs  key_meta_service.rs  key_service.rs  kms_service.rs  secret_service.rs
